# chunk-sort-prj

./: .gitignore  README.md  main.py  pyproject.toml
src/: csv_parser.py  data_parser.py  pd_data_praser.py  tolls.py
