[tool.poetry]
name = "project-2-2-new-logic"
version = "0.1.0"
description = ""
authors = ["Vebnik(Nik) <vebnik111@gmail.com>"]
readme = "README.md"
packages = [{include = "src"}]


[tool.poetry.scripts]
main = "main:main"


[tool.poetry.dependencies]
python = "^3.11"
pandas = "^1.5.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
